@@ -54,10 +54,6 @@ public class StatusCommandlet extends Commandlet {
   }
 
   private void checkForUpdate() {
-    if (!this.context.isOnline()) {
-      this.context.warning("Check for newer version of IDEasy is skipped due to no network connectivity.");
-      return;
-    }
     new IdeasyCommandlet(this.context, null).checkIfUpdateIsAvailable();
     logSystemInfo();
   }
